# PhotoFX

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kalasoft/photofx/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  Schedule  aaTODO  readme
app/src/main/assets/Filters/: Info  Planner  auto.glsl  blur.glsl  enhance.glsl  hsi.glsl  readme  rgb.glsl  vertex.glsl
app/src/main/assets/Filters/computeShaders/: ChageLookup  auto.glsl  blur.glsl  computeShader.info  copy.glsl  enhance.glsl  equalize.glsl  histogram.glsl  hsi.glsl  sharpen.glsl  smoothen.glsl  testCompute.glsl
app/src/main/assets/JavaShaders/: fragmentShader.glsl  vertexShader.glsl
app/src/main/assets/UIProgram/: fragmentShader.glsl  vertexShader.glsl
app/src/main/cpp/: AAREADFIRST  AMain.cpp  AppUI.cpp  AppUI.h  Auto.cpp  Auto.h  CMakeLists.txt  Callbacks.cpp  Commons.cpp  Commons.h  CustomLooperEvents.cpp  CustomLooperEvents.h  EditableImage.cpp  EditableImage.h  Editing.cpp  Editing.h  EventHandling.cpp  EventHandling.h  FilterProperties.cpp  FilterProperties.h  GlobalData.cpp  Graphics.cpp  Graphics.h  Histogram.cpp  Histogram.h  ImageProcessing.cpp  ImageProcessing.h  JavaCalls.cpp  JavaCalls.h  JniMethods.cpp  Layers.cpp  Layers.h  Main.cpp  Main.h  OffScreenRender.cpp  OffScreenRender.h  PhotoApp.cpp  PhotoApp.h  PhotoFXApp.cpp  PhotoFXApp.h  (+15 more)
app/src/main/cpp/Leg/: Callbacks.h  CustomLooperEvents.cpp  CustomLooperEvents.h  Editing.cpp  Editing.h  EventHandling.h  Events.h  Graphics.h  JniMethods.cpp  JniMethods.h  Layers.h  Main.cpp  Main.h  OffScreenRender.h  PhotoApp.cpp  RecyclerView.cpp  RecyclerView.h  Shapes.h  SliderSet.h  Text.cpp  Text.h  TextView.cpp  TextView.h  Touch.cpp  Touch.h  UI.cpp  UIShaderConstantsExtern.h  gpgpu.cpp
app/src/main/java/com/kalasoft/photofx/: ChooserRenderer.java  ChooserView.java  EditorActivity.java  Graphics.java  Image.java  Square.java  Triangle.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kalasoft/photofx/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
